style the info container

--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,9 @@
 
 .wrap {
   padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .wrap header {
   width: 100%;
@@ -45,4 +48,28 @@
   border-radius: 50%;
   border: 2px #332C39 solid;
   background-color: #068FFF;
+}
+.wrap .info {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.wrap .info .title {
+  font-family: Audiowide;
+  font-size: 48px;
+}
+.wrap .info .underline {
+  width: 312px;
+  height: 2px;
+  background-color: #4E4FEB;
+  border-radius: 5px;
+}
+.wrap .info .subtitle {
+  font-family: Oxygen;
+  font-size: 16px;
+  width: 539px;
+  font-weight: 300;
+  margin-top: 18px;
 }/*# sourceMappingURL=style.css.map */
