--- a/public/style.scss
+++ b/public/style.scss
@@ -48,7 +48,7 @@
         }
     }
     .info{
-        margin-top: 30px;
+        margin-top: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -69,6 +69,62 @@
             width: 539px;
             font-weight: 300;
             margin-top: 18px;
+        }
+    }
+    .forms{
+        width: 1100px;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 30px;
+        form{
+            width: 490px;
+            height: 415px;
+            border-radius: 20px;
+            border: 1px #332C39 solid;
+        }
+        #uploadForm{
+            #fileInput {
+                display: none; /* Hide the original file input */
+            }
+            
+            .custom-file-label {
+                display: inline-block;
+                padding: 10px 20px;
+                border: 1px solid #ccc;
+                background-color: #f0f0f0;
+                cursor: pointer;
+                border-radius: 4px;
+                margin-right: 10px;
+            }
+            
+            .custom-file-label:hover {
+                background-color: #e0e0e0;
+            }
+            
+            button {
+                padding: 10px 20px;
+                border: none;
+                background-color: #4CAF50;
+                color: white;
+                cursor: pointer;
+                border-radius: 4px;
+            }
+            
+            button:hover {
+                background-color: #45a049;
+            }
+            
+            #codeInput {
+                padding: 10px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                width: calc(100% - 22px); /* Full width minus padding and border */
+            }
+            
+            #message {
+                color: red;
+                margin-top: 10px;
+            }
         }
     }
 }
