show if any file is chosen in the input type: file, correct the 2-times chosing bug

--- a/public/style.css
+++ b/public/style.css
@@ -120,4 +120,9 @@
 .wrap .forms #uploadForm #message {
   color: red;
   margin-top: 10px;
+}
+.wrap .forms #uploadForm #fileName {
+  display: inline-block;
+  margin-left: 10px;
+  font-style: italic;
 }/*# sourceMappingURL=style.css.map */
