--- a/public/style.scss
+++ b/public/style.scss
@@ -125,6 +125,12 @@
                 color: red;
                 margin-top: 10px;
             }
+            
+            #fileName {
+                display: inline-block;
+                margin-left: 10px;
+                font-style: italic;
+            }
         }
     }
 }
