--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,8 @@
 }
 
 .wrap {
+  width: 100%;
+  height: 100vh;
   padding: 40px;
   display: flex;
   flex-direction: column;
@@ -50,7 +52,7 @@
   background-color: #068FFF;
 }
 .wrap .info {
-  margin-top: 20px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -84,21 +86,31 @@
   height: 415px;
   border-radius: 20px;
   border: 1px #332C39 solid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
 }
 .wrap .forms #uploadForm #fileInput {
   display: none; /* Hide the original file input */
 }
 .wrap .forms #uploadForm .custom-file-label {
-  display: inline-block;
-  padding: 10px 20px;
-  border: 1px solid #ccc;
-  background-color: #f0f0f0;
+  width: 177px;
+  height: 177px;
+  border-radius: 50%;
+  border: 2px solid #4E4FEB;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 128px;
+  color: #4E4FEB;
   cursor: pointer;
-  border-radius: 4px;
-  margin-right: 10px;
+  font-weight: 500;
+  transition: 0.3s ease;
 }
 .wrap .forms #uploadForm .custom-file-label:hover {
-  background-color: #e0e0e0;
+  background-color: #4E4FEB;
+  color: #fff;
 }
 .wrap .forms #uploadForm button {
   padding: 10px 20px;
