--- a/public/style.scss
+++ b/public/style.scss
@@ -5,6 +5,8 @@
     color: #332C39;
 }
 .wrap{
+    width: 100%;
+    height: 100vh;
     padding: 40px;
     display: flex;
     flex-direction: column;
@@ -48,7 +50,7 @@
         }
     }
     .info{
-        margin-top: 20px;
+        margin-top: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -81,24 +83,35 @@
             height: 415px;
             border-radius: 20px;
             border: 1px #332C39 solid;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 40px;
         }
         #uploadForm{
+
             #fileInput {
                 display: none; /* Hide the original file input */
             }
             
             .custom-file-label {
-                display: inline-block;
-                padding: 10px 20px;
-                border: 1px solid #ccc;
-                background-color: #f0f0f0;
+                width: 177px;
+                height: 177px;
+                border-radius: 50%;
+                border: 2px solid #4E4FEB;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 128px;
+                color: #4E4FEB;
                 cursor: pointer;
-                border-radius: 4px;
-                margin-right: 10px;
+                font-weight: 500;
+                transition: 0.3s ease;
             }
             
             .custom-file-label:hover {
-                background-color: #e0e0e0;
+                background-color: #4E4FEB;
+                color: #fff;
             }
             
             button {
