--- a/public/style.scss
+++ b/public/style.scss
@@ -91,7 +91,7 @@
         #uploadForm{
 
             #fileInput {
-                display: none; /* Hide the original file input */
+                display: none;
             }
             
             .custom-file-label {
@@ -144,6 +144,37 @@
                 margin-left: 10px;
                 font-style: italic;
             }
+        }
+        #downloadForm{
+            .downloadForm_icon {
+                width: 177px;
+                height: 177px;
+                border-radius: 50%;
+                border: 2px solid #068FFF;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 90px;
+                cursor: pointer;
+                font-weight: 500;
+                transition: 0.3s ease;
+                color: #068FFF;
+            }
+            
+            .downloadForm_icon:hover {
+                background-color: #068FFF;
+                color: #fff;
+            }
+            
+            .downloadForm_icon .cloud {
+                color: #068FFF;
+                transition: 0.3s ease;
+            }
+            
+            .downloadForm_icon:hover .cloud {
+                color: #fff;
+            }
+            
         }
     }
 }
