--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,16 @@
   color: #332C39;
 }
 
+::-moz-selection {
+  background-color: #332C39;
+  color: #fff;
+}
+
+::selection {
+  background-color: #332C39;
+  color: #fff;
+}
+
 .wrap {
   width: 100%;
   height: 100vh;
