--- a/public/style.scss
+++ b/public/style.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
     color: #332C39;
 }
+::selection{
+    background-color: #332C39;
+    color: #fff;
+}
 .wrap{
     width: 100%;
     height: 100vh;
