--- a/public/style.css
+++ b/public/style.css
@@ -100,9 +100,14 @@
   flex-direction: column;
   align-items: center;
   padding: 40px;
+  font-family: Oxygen;
 }
 .wrap .forms #uploadForm #fileInput {
   display: none;
+}
+.wrap .forms #uploadForm h3 {
+  font-size: 24px;
+  font-weight: 700;
 }
 .wrap .forms #uploadForm .custom-file-label {
   width: 177px;
@@ -147,6 +152,10 @@
   display: inline-block;
   margin-left: 10px;
   font-style: italic;
+}
+.wrap .forms #downloadForm h3 {
+  font-size: 24px;
+  font-weight: 700;
 }
 .wrap .forms #downloadForm .downloadForm_icon {
   width: 177px;
