--- a/public/style.css
+++ b/public/style.css
@@ -117,7 +117,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 128px;
+  font-size: 90px;
   color: #4E4FEB;
   cursor: pointer;
   font-weight: 500;
@@ -125,6 +125,13 @@
 }
 .wrap .forms #uploadForm .custom-file-label:hover {
   background-color: #4E4FEB;
+  color: #fff;
+}
+.wrap .forms #uploadForm .plus {
+  color: #4E4FEB;
+  transition: 0.3s ease;
+}
+.wrap .forms #uploadForm .plus:hover {
   color: #fff;
 }
 .wrap .forms #uploadForm button {
