--- a/public/style.scss
+++ b/public/style.scss
@@ -110,7 +110,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                font-size: 128px;
+                font-size: 90px;
                 color: #4E4FEB;
                 cursor: pointer;
                 font-weight: 500;
@@ -119,6 +119,15 @@
             
             .custom-file-label:hover {
                 background-color: #4E4FEB;
+                color: #fff;
+            }
+            
+            .plus {
+                color: #4E4FEB;
+                transition: 0.3s ease;
+            }
+            
+            .plus:hover {
                 color: #fff;
             }
             
