add the file saving description and keyWords, style all the elements

--- a/public/style.scss
+++ b/public/style.scss
@@ -181,6 +181,18 @@
                 font-size: 24px;
                 font-weight: 700;
             }
+            p{
+                width: 363px;
+                font-family: Oxygen;
+                font-size: 16px;
+                font-weight: 300;
+                text-align: center;
+                margin-top: 10px;
+                .keyWords{
+                    font-weight: 400;
+                    color: #068FFF;
+                }
+            }
             .downloadForm_icon {
                 width: 177px;
                 height: 177px;
