--- a/public/style.css
+++ b/public/style.css
@@ -177,6 +177,18 @@
   font-size: 24px;
   font-weight: 700;
 }
+.wrap .forms #downloadForm p {
+  width: 363px;
+  font-family: Oxygen;
+  font-size: 16px;
+  font-weight: 300;
+  text-align: center;
+  margin-top: 10px;
+}
+.wrap .forms #downloadForm p .keyWords {
+  font-weight: 400;
+  color: #068FFF;
+}
 .wrap .forms #downloadForm .downloadForm_icon {
   width: 177px;
   height: 177px;
