--- a/public/style.scss
+++ b/public/style.scss
@@ -90,7 +90,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 40px;
+            padding: 30px;
             font-family: Oxygen;
 
         }
@@ -235,6 +235,8 @@
             }
             .codeInputBtnCon{
                 width: 250px;
+                height: 50px;
+
                 display: flex;
                 justify-content: space-between;
                 margin-top: 15px;
@@ -276,14 +278,17 @@
                 background-color: #068FFF;
                 color: #fff;
             }
-            
             .downloadForm_icon .cloud {
                 color: #068FFF;
                 transition: 0.3s ease;
             }
-            
             .downloadForm_icon:hover .cloud {
                 color: #fff;
+            }
+            #message{
+                margin-top: 15px;
+                font-family: Oxygen;
+                font-weight: 500;
             }
             
         }
