--- a/public/style.css
+++ b/public/style.css
@@ -185,14 +185,15 @@
   border-radius: 4px;
   width: calc(100% - 22px); /* Full width minus padding and border */
 }
-.wrap .forms #uploadForm #message {
-  color: red;
-  margin-top: 10px;
-}
 .wrap .forms #uploadForm #fileName {
   display: inline-block;
   margin-left: 10px;
   font-style: italic;
+}
+.wrap .forms #uploadForm #UploadMessage {
+  margin-top: 15px;
+  font-family: Oxygen;
+  font-weight: 500;
 }
 .wrap .forms #downloadForm h3 {
   font-size: 24px;
