--- a/public/style.scss
+++ b/public/style.scss
@@ -28,28 +28,43 @@
             width: 150px;
             display: flex;
             justify-content: space-between;
-        }
-        #languageChanger{
-            border: none;
-            outline: none;
-            font-family: Oxygen;
-            font-size: 20px;
-            font-weight: 400;
-        }
-        .themeChanger{
-            width: 55px;
-            height: 30px;
-            border-radius: 20px;
-            background-color: #332C39;
-            display: flex;
-            justify-content: flex-start;
-            cursor: pointer;
-            .themeChanger_circle{
-                width: 30px;
+            #languageChanger{
+                border: none;
+                outline: none;
+                font-family: Oxygen;
+                font-size: 20px;
+                font-weight: 400;
+            }
+            .themeChanger{
+                width: 55px;
                 height: 30px;
-                border-radius: 50%;
-                border: 2px #332C39 solid;
-                background-color: #068FFF;
+                border-radius: 20px;
+                background-color: #332C39;
+                display: flex;
+                justify-content: flex-start;
+                cursor: pointer;
+                .themeChanger_circle{
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 50%;
+                    border: 2px #332C39 solid;
+                    background-color: #068FFF;
+                }
+            }
+        }
+
+        .burger{
+            width: 40px;
+            height: 26px;
+            display: none;
+            flex-direction: column;
+            justify-content: space-between;
+            cursor: pointer;
+            .burger_row{
+                width: 100%;
+                height: 2px;
+                border-radius: 5px;
+                background-color: #332C39;
             }
         }
     }
