--- a/public/adapt.scss
+++ b/public/adapt.scss
@@ -1,5 +1,6 @@
 @media screen and (max-device-width: 430px) {
     .wrap{
+        width: 100%;
         header{
             width: 100%;
             .languageThemeCon{
@@ -7,6 +8,31 @@
             }
             .burger{
                 display: flex;
+            }
+        }
+        .info{
+            width: 100%;
+            .subtitle{
+                width: 400px;
+            }
+        }
+        .forms{
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+            form{
+                width: 390px;
+            }
+            #uploadForm{
+                p{
+                    width: 300px;
+                }
+            }
+            #downloadForm{
+                margin: 40px 0;
+                p{
+                    width: 300px;
+                }
             }
         }
     }
