--- a/public/adapt.scss
+++ b/public/adapt.scss
@@ -12,8 +12,10 @@
         }
         .info{
             width: 100%;
+            margin-top: 20px;
             .subtitle{
                 width: 400px;
+                font-size: 14px;
             }
         }
         .forms{
