--- a/public/adapt.css
+++ b/public/adapt.css
@@ -1,6 +1,7 @@
 @media screen and (max-device-width: 430px) {
   .wrap {
     width: 100%;
+    padding: 20px;
   }
   .wrap header {
     width: 100%;
@@ -15,8 +16,11 @@
     width: 100%;
     margin-top: 20px;
   }
+  .wrap .info .title {
+    font-size: 40px;
+  }
   .wrap .info .subtitle {
-    width: 400px;
+    width: 370px;
     font-size: 14px;
   }
   .wrap .forms {
