--- a/public/style.scss
+++ b/public/style.scss
@@ -78,12 +78,18 @@
             font-family: Audiowide;
             font-size: 48px;
         }
-        .underline{
+        .underline_container{
             width: 312px;
             height: 2px;
-            background-color: #4E4FEB;
-            border-radius: 5px;
+            .underline{
+                width: 0px;
+                height: 2px;
+                background-color: #4E4FEB;
+                border-radius: 5px;
+                transition: 1s ease;
+            }
         }
+
         .subtitle{
             font-family: Oxygen;
             font-size: 16px;
