--- a/public/style.scss
+++ b/public/style.scss
@@ -96,6 +96,9 @@
             font-weight: 300;
             margin-top: 18px;
         }
+        .amount{
+            display: flex;
+        }
     }
     .forms{
         width: 1100px;
