--- a/public/style.css
+++ b/public/style.css
@@ -104,9 +104,6 @@
   font-weight: 300;
   margin-top: 18px;
 }
-.wrap .info .amount {
-  display: flex;
-}
 .wrap .forms {
   width: 1100px;
   display: flex;
@@ -232,6 +229,9 @@
 .wrap .forms #downloadForm p .keyWords {
   font-weight: 400;
   color: #068FFF;
+}
+.wrap .forms #downloadForm p .amount {
+  display: flex;
 }
 .wrap .forms #downloadForm .downloadForm_icon {
   width: 150px;
